--- a/src/components/Error/Error.module.scss
+++ b/src/components/Error/Error.module.scss
@@ -6,6 +6,9 @@
     touch-action: manipulation;
 }
 
+
+
+
 .error__text {
     display: flex;
     width: 100%;
@@ -17,17 +20,53 @@
     width: 100%;
     position: relative;
     font-size: 120px;
-    color: #252839;
-    -webkit-text-stroke: 0.3vw #383d52;
+    color: rgba(0, 255, 255,0);
+    -webkit-text-stroke: 0.3vw black;
     text-transform: uppercase;
     font-weight: 500;
+
+    @media screen and (max-width:1024px) {
+        font-size: 50px;
+     }
+
+     @media screen and (max-width:424px) {
+        font-size: 30px;
+     }
+    
 }
 
 .error__404 {
     font-size: 180px;
     text-align: center;
+
+    @media screen and (max-width:1024px) {
+        font-size: 70px;
+     }
+
+     @media screen and (max-width:424px) {
+        font-size: 30px;
+     }
 }
 
+.btn{
+    text-align: center;
+    margin: 0 auto;
+    width: 150px;
+    display: block;
+    padding: 10px 20px;
+    background: #085CD3;
+    transition: 0.3s;
+    font-weight: 500;
+    border-radius: 4px;
+    &:hover{
+        background: rgba(204, 204, 204,0.4);
+    }
+
+    @media screen and (max-width:824px) {
+        font-size: 14px;
+        width: 120px;
+     }
+}
 
 .error__massage::before {
     content: attr(data-text);
@@ -37,38 +76,10 @@
     bottom: 100px;
     width: 100%;
     height: 100%;
-    color: #01fe87;
+    color: #085CD3;
     overflow: hidden;
     animation: animate 6s linear infinite;
 
-}
-
-
-@keyframes animate1 {
-
-    0% {
-        width: 0;
-    }
-
-    10% {
-        width: 0;
-    }
-
-    100% {
-        width: 0;
-    }
-
-    70% {
-        width: 100%;
-    }
-
-    80% {
-        width: 100%;
-    }
-
-    90% {
-        width: 100%;
-    }
 }
 
 .error__text {
@@ -79,9 +90,6 @@
     width: 100%;
 }
 
-
-
-
 .liquid {
     position: relative;
     display: flex;
@@ -91,6 +99,14 @@
 
 .liquid h2 {
     font-size: 125px;
+
+    @media screen and (max-width:1024px) {
+        font-size: 50px;
+     }
+
+     @media screen and (max-width:424px) {
+        font-size: 30px;
+     }
 }
 
 .liquid h2:nth-child(1) {
@@ -100,29 +116,13 @@
         -18px 18px 40px rgba(0, 0, 0, 0.5);
 }
 
-.liquid h2:nth-child(2) {
-    color: #2196f3;
-    animation: animate1 6s linear infinite;
-    opacity: 0.5;
-}
-
-.liquid h2:nth-child(3) {
-    color: #2196f3;
-    opacity: 0.5;
-    animation: animate1 6s linear infinite;
-}
-
-.liquid h2:nth-child(4) {
-    color: #2196f3;
-    animation: animate1 6s linear infinite;
-}
 
 @keyframes animate {
 
     0%,
     100% {
         clip-path: polygon(0% 46%,
-                45% 45%,
+                0% 25%,
                 34% 52%,
                 50% 61%,
                 68% 65%,
@@ -144,3 +144,4 @@
                 0% 100%);
     }
 }
+
