add home button remove color white in error component

--- a/src/components/Error/Error.module.scss
+++ b/src/components/Error/Error.module.scss
@@ -58,6 +58,7 @@
     transition: 0.3s;
     font-weight: 500;
     border-radius: 4px;
+    color: white;
     &:hover{
         background: rgba(204, 204, 204,0.4);
     }
