--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -36,7 +36,8 @@
     border-radius: 5px;
     background: rgba(0, 255, 255, 0.3);
     overflow: hidden;
-    box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.75)
+    box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.75);
+    margin-left: 1px;
   }
 
   .button .span {
@@ -97,14 +98,14 @@
 
   .button .span {
     position: absolute;
-    top: 10px;
+    top: 0px;
     left: 30px;
     font-size: 1rem
   }
 
   .wave {
     position: absolute;
-    top: 5px;
+    top: 10px;
     left: 0;
     animation: waveAnim1 ease-in-out 2s alternate infinite;
   }
