Add editor header filse

--- a/src/components/Default/Default.module.scss
+++ b/src/components/Default/Default.module.scss
@@ -48,9 +48,13 @@
     @apply flex gap-12 flex-wrap m-0 p-0 list-none ;
     .item {
       @apply max-w-[192px] w-full pt-5 pb-6 bg-white rounded ;
-      img {
-        @apply h-[120px] w-[120px] rounded-[50%] mx-auto;
+      .imgBox {
+        @apply flex mx-auto w-[150px] h-[150px] rounded-[50%] bg-white;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+        img {
+          @apply h-[110px] w-[110px] rounded-[50%] m-auto ;
+          transition: all 0.4s ease;
+        }
       }
       .content {
         @apply pt-6 px-4 ;
@@ -60,6 +64,13 @@
         a {
           @apply block font-medium text-lg text-center text-white py-1 px-4 rounded-2xl ;
           background: linear-gradient(265.48deg, #095acd 33.12%, #006aff 84.7%);
+        }
+      }
+      &:hover {
+        .imgBox {
+          img {
+            @apply h-[130px] w-[130px] ;
+          }
         }
       }
     }
