Add default module scss editor

--- a/src/components/Default/Default.module.scss
+++ b/src/components/Default/Default.module.scss
@@ -69,7 +69,7 @@
       &:hover {
         .imgBox {
           img {
-            @apply h-[130px] w-[130px] ;
+            @apply h-[130px] max-w-[130px] w-full ;
           }
         }
       }
