--- a/src/components/Default/Default.module.scss
+++ b/src/components/Default/Default.module.scss
@@ -1,5 +1,5 @@
 .default {
-  @apply py-24 ;
+  @apply py-24;
 }
 
 .container {
@@ -15,27 +15,27 @@
 }
 
 .title {
-  @apply font-semibold text-6xl text-center ;
+  @apply font-semibold text-6xl text-center;
 }
 
 .imageBox {
   @apply h-[439px] w-full rounded;
   img {
-    @apply h-[439px] rounded ;
+    @apply h-[439px] rounded;
   }
 }
 
 .boxRight {
-  @apply w-1/4 py-8 px-10 rounded ;
+  @apply w-1/4 py-8 px-10 rounded;
   background: linear-gradient(265.48deg, #085ed7 33.12%, #006aff 84.7%);
-  .reklama{
+  .reklama {
     @apply font-medium text-2xl text-white;
   }
 }
 
 .boxBottom {
   @apply py-12 px-10 bg-slate-100 rounded;
-  .titleBox{
+  .titleBox {
     @apply max-w-[200px] w-full mb-16 pl-5 border-l-4 border-blue-500;
     h2 {
       @apply my-0 font-medium text-2xl text-slate-700;
@@ -45,31 +45,82 @@
     }
   }
   .list {
-    @apply flex gap-12 flex-wrap m-0 p-0 list-none ;
+    @apply flex gap-12 flex-wrap m-0 p-0 list-none;
     .item {
-      @apply max-w-[192px] w-full pt-5 pb-6 bg-white rounded ;
+      @apply max-w-[192px] w-full pt-5 pb-6 bg-white rounded;
       .imgBox {
         @apply flex mx-auto w-[150px] h-[150px] rounded-[50%] bg-white;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
         img {
-          @apply h-[110px] w-[110px] rounded-[50%] m-auto ;
+          @apply h-[110px] w-[110px] rounded-[50%] m-auto;
           transition: all 0.4s ease;
         }
       }
       .content {
-        @apply pt-6 px-4 ;
+        @apply pt-6 px-4;
         p {
           @apply mb-4 font-medium text-xl text-slate-600;
         }
         a {
-          @apply block font-medium text-lg text-center text-white py-1 px-4 rounded-2xl ;
-          background: linear-gradient(265.48deg, #095acd 33.12%, #006aff 84.7%);
+          @apply relative overflow-hidden w-full max-w-[160px] block py-1 px-4 rounded-2xl;
+          &:hover {
+            .wave {
+              top: -100px;
+            }
+          }
+          .text {
+            @apply relative z-10 my-0 font-medium text-lg text-center text-white;
+          }
+
+          .wave {
+            width: 160px;
+            height: 160px;
+            background-color: #006aff;
+            box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+            position: absolute;
+            left: 0;
+            top: -65px;
+            transition: 0.4s;
+
+            &::before,
+            &::after {
+              width: 200%;
+              height: 200%;
+              content: "";
+              position: absolute;
+              top: 0;
+              left: 50%;
+              transform: translate(-50%, -75%);
+            }
+
+            &::before {
+              border-radius: 45%;
+              background-color: rgba(220, 220, 220, 1);
+              animation: wave 5s infinite;
+            }
+
+            &::after {
+              border-radius: 40%;
+              background-color: rgba(220, 220, 220, 0.5);
+              animation: wave 10s infinite;
+            }
+          }
+        }
+
+        @keyframes wave {
+          0% {
+            transform: translate(-50%, -75%) rotate(0deg);
+          }
+
+          100% {
+            transform: translate(-50%, -75%) rotate(360deg);
+          }
         }
       }
       &:hover {
         .imgBox {
           img {
-            @apply h-[130px] max-w-[130px] w-full ;
+            @apply h-[130px] max-w-[130px] w-full;
           }
         }
       }
