--- a/src/components/Error/Error.module.scss
+++ b/src/components/Error/Error.module.scss
@@ -1,148 +1,189 @@
 .error__img {
-    width: 100%;
-    height: 100vh;
-    background-image: url('https://images.wallpaperscraft.com/image/single/ocean_beach_aerial_view_134429_1920x1080.jpg');
-    background-repeat: no-repeat;
-    touch-action: manipulation;
+  width: 100%;
+  height: 100vh;
+  background-image: url("https://images.wallpaperscraft.com/image/single/ocean_beach_aerial_view_134429_1920x1080.jpg");
+  background-repeat: no-repeat;
+  touch-action: manipulation;
 }
 
-
-
-
 .error__text {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    background: rgba(204, 204, 204, 0.2);
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  background: rgba(204, 204, 204, 0.2);
 }
 
 .error__massage {
-    width: 100%;
-    position: relative;
-    font-size: 120px;
-    color: rgba(0, 255, 255,0);
-    -webkit-text-stroke: 0.3vw black;
-    text-transform: uppercase;
-    font-weight: 500;
+  width: 100%;
+  position: relative;
+  font-size: 120px;
+  color: rgba(0, 255, 255, 0);
+  -webkit-text-stroke: 0.3vw black;
+  text-transform: uppercase;
+  font-weight: 500;
 
-    @media screen and (max-width:1024px) {
-        font-size: 50px;
-     }
+  @media screen and (max-width: 1024px) {
+    font-size: 50px;
+  }
 
-     @media screen and (max-width:424px) {
-        font-size: 30px;
-     }
-    
+  @media screen and (max-width: 424px) {
+    font-size: 30px;
+  }
 }
 
 .error__404 {
-    font-size: 180px;
-    text-align: center;
+  font-size: 180px;
+  text-align: center;
 
-    @media screen and (max-width:1024px) {
-        font-size: 70px;
-     }
+  @media screen and (max-width: 1024px) {
+    font-size: 70px;
+  }
 
-     @media screen and (max-width:424px) {
-        font-size: 30px;
-     }
+  @media screen and (max-width: 424px) {
+    font-size: 30px;
+  }
 }
 
-.btn{
-    text-align: center;
-    margin: 0 auto;
-    width: 150px;
-    display: block;
-    padding: 10px 20px;
-    background: #085CD3;
-    transition: 0.3s;
+.btn {
+  @apply relative overflow-hidden w-full max-w-[160px] block rounded-md py-2 px-5 mx-auto;
+  transition: 0.3s;
+  &:hover {
+    .wave {
+      top: -100px;
+    }
+  }
+  .text {
+    position: relative;
+    z-index: 10;
+    margin: 0;
     font-weight: 500;
-    border-radius: 4px;
+    text-align: center;
     color: white;
-    &:hover{
-        background: rgba(204, 204, 204,0.4);
+  }
+
+  .wave {
+    width: 160px;
+    height: 160px;
+    background-color: #006aff;
+    box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    left: 0;
+    top: -65px;
+    transition: 0.4s;
+
+    &::before,
+    &::after {
+      width: 200%;
+      height: 200%;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -75%);
     }
 
-    @media screen and (max-width:824px) {
-        font-size: 14px;
-        width: 120px;
-     }
+    &::before {
+      border-radius: 45%;
+      background-color: rgba(220, 220, 220, 1);
+      animation: wave 5s infinite;
+    }
+
+    &::after {
+      border-radius: 40%;
+      background-color: rgba(220, 220, 220, 0.5);
+      animation: wave 10s infinite;
+    }
+  }
+  @media screen and (max-width: 824px) {
+    font-size: 14px;
+    width: 120px;
+  }
+}
+
+@keyframes wave {
+  0% {
+    transform: translate(-50%, -75%) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(-50%, -75%) rotate(360deg);
+  }
 }
 
 .error__massage::before {
-    content: attr(data-text);
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 100px;
-    width: 100%;
-    height: 100%;
-    color: #085CD3;
-    overflow: hidden;
-    animation: animate 6s linear infinite;
-
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 100px;
+  width: 100%;
+  height: 100%;
+  color: #085cd3;
+  overflow: hidden;
+  animation: animate 6s linear infinite;
 }
 
 .error__text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .liquid {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .liquid h2 {
-    font-size: 125px;
+  font-size: 125px;
 
-    @media screen and (max-width:1024px) {
-        font-size: 50px;
-     }
+  @media screen and (max-width: 1024px) {
+    font-size: 50px;
+  }
 
-     @media screen and (max-width:424px) {
-        font-size: 30px;
-     }
+  @media screen and (max-width: 424px) {
+    font-size: 30px;
+  }
 }
 
 .liquid h2:nth-child(1) {
-    color: #fff;
-    text-shadow: -2px 2px 0px #183954, -4px 4px 0px #183954, -6px 6px 0px #183954,
-        -8px 8px 10px #183954, -8px 18px 20px rgba(0, 0, 0, 0.5),
-        -18px 18px 40px rgba(0, 0, 0, 0.5);
+  color: #fff;
+  text-shadow: -2px 2px 0px #183954, -4px 4px 0px #183954, -6px 6px 0px #183954,
+    -8px 8px 10px #183954, -8px 18px 20px rgba(0, 0, 0, 0.5),
+    -18px 18px 40px rgba(0, 0, 0, 0.5);
 }
-
 
 @keyframes animate {
+  0%,
+  100% {
+    clip-path: polygon(
+      0% 46%,
+      0% 25%,
+      34% 52%,
+      50% 61%,
+      68% 65%,
+      85% 61%,
+      100% 53%,
+      100% 100%,
+      0% 100%
+    );
+  }
 
-    0%,
-    100% {
-        clip-path: polygon(0% 46%,
-                0% 25%,
-                34% 52%,
-                50% 61%,
-                68% 65%,
-                85% 61%,
-                100% 53%,
-                100% 100%,
-                0% 100%);
-    }
-
-    50% {
-        clip-path: polygon(3% 59%,
-                17% 67%,
-                36% 70%,
-                51% 66%,
-                65% 56%,
-                81% 49%,
-                99% 45%,
-                100% 100%,
-                0% 100%);
-    }
+  50% {
+    clip-path: polygon(
+      3% 59%,
+      17% 67%,
+      36% 70%,
+      51% 66%,
+      65% 56%,
+      81% 49%,
+      99% 45%,
+      100% 100%,
+      0% 100%
+    );
+  }
 }
-
