--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,71 @@
+
+  // .asas {
+  //   width: 200px;
+  //   padding: 20px 30px;
+  //   position: relative;
+  //   display: block;
+  //   text-decoration: none;
+  //   overflow: hidden;
+    
+  //   &:hover {
+  //     .wave2 {
+  //       top: -120px;
+  //     }
+  //   }
+
+  //   .asa {
+  //     position: relative;
+  //     z-index: 1;
+  //     color: white;
+  //     font-size: 15px;
+  //     letter-spacing: 8px;
+  //   }
+
+  //   .wave2 {
+  //     width: 200px;
+  //     height: 200px;
+  //     background-color: rgba(58, 58, 226, 0.5);
+  //     box-shadow: inset 0 0 50px rgba(0,0,0,.5);
+  //     position: absolute;
+  //     left: 0;
+  //     top: -80px;
+  //     transition: 0.4s;
+
+  //     &::before, &::after {
+  //       width: 200%;
+  //       height: 200%;
+  //       content: '';
+  //       position: absolute;
+  //       top: 0;
+  //       left: 50%;
+  //       transform: translate(-50%,-75%);
+  //     }
+
+  //     &::before {
+  //       border-radius: 45%;
+  //       background-color: rgba(50,50,50,1);
+  //       animation: wave2 5s  infinite;
+  //     }
+
+  //     &::after {
+  //       border-radius: 40%;
+  //       background-color: rgba(50,50,50,0.5);
+  //       animation: wave2 10s  infinite;
+  //     }
+  //   }
+  // }
+
+  // @keyframes wave2 {
+  //   0% {
+  //     transform: translate(-50%,-75%) rotate(0deg);
+  //   }
+
+  //   100% {
+  //     transform: translate(-50%,-75%) rotate(360deg);
+  //   }
+  // }
+
+
 .header {
   @apply py-6;
   background: linear-gradient(265.48deg, #095acd 33.12%, #006aff 84.7%);
@@ -24,49 +92,59 @@
     border: 1px solid rgba(255, 255, 255, 0.1);
   }
 
-  button {
-    @apply py-[10px] px-[20px] bg-[none] rounded-r-md text-white font-semibold text-lg;
-  }
-
   .button {
-    position: relative;
-    border: none;
-    width: 120px;
-    height: 48px;
-    background: rgba(0, 255, 255, 0.3);
-    overflow: hidden;
-    box-shadow: 7px 0px 12px 0px rgba(50, 50, 50, 0.75);
-  }
-
-  .button .span {
-    position: absolute;
-    top: 0px;
-    left: 30px;
-    font-size: 1rem
-  }
-
-  .wave {
-    position: absolute;
-    top: 0;
-    left: 0;
-    animation: waveAnim ease-in-out 2s alternate infinite;
-  }
-
-  .anim__btn {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    right: 0;
-    text-align: center;
-  }
-
-  @keyframes waveAnim {
-    from {
-      transform: rotateX(25deg) translateX(0%);
+    @apply w-full max-w-[120px] py-[10px] px-[20px] bg-[none] rounded-r-md text-white font-semibold text-lg relative block overflow-hidden;
+    &:hover {
+      .wave {
+        top: -70px;
+      }
     }
 
-    to {
-      transform: rotateX(60deg) translateX(-25%);
+    .btnText {
+      @apply relative z-10 text-white font-semibold text-lg ;
+    }
+
+    .wave {
+      width: 120px;
+      height: 120px;
+      background-color: rgba(58, 58, 226, 0.5);
+      box-shadow: inset 0 0 50px rgba(0,0,0,.5);
+      position: absolute;
+      left: 0;
+      top: -40px;
+      transition: 0.4s;
+
+      &::before, &::after {
+        width: 200%;
+        height: 200%;
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%,-75%);
+      }
+
+      &::before {
+        border-radius: 45%;
+        background-color: rgba(220,220,220,1);
+        animation: wave 5s  infinite;
+      }
+
+      &::after {
+        border-radius: 40%;
+        background-color: rgba(220,220,220,0.5);
+        animation: wave 10s  infinite;
+      }
+    }
+  }
+
+  @keyframes wave {
+    0% {
+      transform: translate(-50%,-75%) rotate(0deg);
+    }
+
+    100% {
+      transform: translate(-50%,-75%) rotate(360deg);
     }
   }
 
@@ -79,51 +157,61 @@
 .singin {
   @apply inline-block no-underline;
 
-  button {
-    @apply py-[10px] px-[20px] bg-[#FE8B37] rounded-md text-white font-semibold text-lg;
-  }
-
   .button {
-    position: relative;
-    border: none;
-    width: 160px;
-    height: 48px;
-    background: rgba(0, 255, 255, 0.3);
-    overflow: hidden;
-    box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.75)
-  }
-
-  .button .span {
-    position: absolute;
-    top: 0px;
-    left: 30px;
-    font-size: 1rem
-  }
-
-  .wave {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    animation: waveAnim1 ease-in-out 2s alternate infinite;
-  }
-
-  .anim__btn {
-    position: absolute;
-    top: 10px;
-    left: 0;
-    right: 0;
-    text-align: center;
-  }
-
-  @keyframes waveAnim1 {
-    from {
-      transform: rotateX(25deg) translateX(0%);
+    @apply relative block w-full max-w-[200px] py-[10px] px-[20px] rounded-md overflow-hidden;
+    &:hover {
+      .wave {
+        top: -120px;
+      }
     }
 
-    to {
-      transform: rotateX(60deg) translateX(-15%);
+    .btnText {
+      @apply relative z-10 text-white font-semibold text-lg ;
+    }
+
+    .wave {
+      width: 200px;
+      height: 200px;
+      background-color: rgba(58, 58, 226, 0.5);
+      box-shadow: inset 0 0 50px rgba(0,0,0,.5);
+      position: absolute;
+      left: 0;
+      top: -80px;
+      transition: 0.4s;
+
+      &::before, &::after {
+        width: 200%;
+        height: 200%;
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%,-75%);
+      }
+
+      &::before {
+        border-radius: 45%;
+        background-color: rgba(220,220,220,1);
+        animation: wave 5s  infinite;
+      }
+
+      &::after {
+        border-radius: 40%;
+        background-color: rgba(220,220,220,0.5);
+        animation: wave 10s  infinite;
+      }
     }
   }
+
+  @keyframes wave {
+    0% {
+      transform: translate(-50%,-75%) rotate(0deg);
+    }
+
+    100% {
+      transform: translate(-50%,-75%) rotate(360deg);
+    }
+  }  
 }
 
 .checkBox {
